<resources>
    <string name="app_name">FakeCall</string>
    <string name="name">Harry Potter</string>
    <string name="incoming_video_call">Incoming Video Call....</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="fake_video_call">Fake Video Call</string>
    <string name="fake_message">Fake Message</string>
    <string name="see_more">See more</string>
    <string name="fake_call">Fake Call</string>
    <string name="call_coming">Call Coming...</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="flash">Flash</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate Us</string>
    <string name="select_language">Select Language</string>
    <string name="this_action_can_be_contain_ads">This action can be contain ads...</string>
    <string name="fake_audio_call">Fake Audio Call</string>
    <string name="fakes_chat">Fake Chat</string>
    <string name="how_do_you_feel_about_the_call">How do you feel about the call?</string>
    <string name="message">Message</string>
    <string name="reminder">Reminder</string>
    <string name="close">Close</string>
    <string name="good">Good</string>
    <string name="not_good">Not Good</string>
    <string name="incoming_audio_call">Incoming Call.....</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
</resources>